# RustyDiscord

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.toml  main.rs
src/config/: colors.rs  mod.rs
src/discord/: client.rs
src/tui/: app.rs  input.rs  ui.rs
tests/: discord_client_test.rs
