[package]
name = "rusty_discord"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
crossterm = "0.26"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
ratatui = "0.29.0"
toml = "0.8.20"

[lib]
name = "rusty_discord"
path = "src/lib.rs"
